pandora-fluid.user.css
/* Remove extra space at bottom of page */
#mainContainer {
    height: auto !important;
    min-height: 96px;
}

/* Allow resizing (needed for responsive queries below */
#playerBar, #brandingBar {
    min-width: 425px !important;
}

/* Make sure the top station menu is scrollable in a short window */
.stationChangeList .stationList {
    overflow-y: auto !important;
    max-height: calc(100vh - 30px) !important; /* fit below the 30px-high #brandingBar */
}

/* Hide "create station" in playerBar as window gets narrow */
@media(max-width: 960px) {
    #playerBar .leftcolumn {
        display: none !important;
    }
}

/* Shrink song info in playerBar as window gets narrower */
@media(max-width: 715px) {
    #playerBar .rightcolumn {
        width: 215px !important; /* normally 265px */
    }
    #playerBar .rightcolumn .info {
        width: 150px !important; /* normally 200px */
    }
}

/* Shrink progressBar in playerBar as window gets even narrower */
@media(max-width: 715px) and (min-width: 581px) {
    #playerBar .progress {
        width: 280px !important;
    }
    #playerBar .progress .progressBar {
        width: 200px !important; /* normally 345px */
    }
    #playerBar .progress .progressBar .progressMiddle {
        -webkit-transform-origin: left;
        -webkit-transform: scaleX(calc(200/345));
    }
}

/* Hide everything below the player controls as window gets short */
@media(max-height: 200px) {
    #mainContentContainer,
    #skinTab,
    #footer {
        display: none !important;
    }
}

/* Mini player 425px x 96px */
@media(max-width: 580px) {
    /* Shrink the buttons and logo to 60%-size */
    #brandingBar .leftcolumn {
        -webkit-transform: scale(0.6);
        -webkit-transform-origin: left;
    }

    #playerBar .middlecolumn .buttons {
        width: 200px !important;
    }

    .middlecolumn {
        min-width: initial !important;
    }

    #playerBar .thumbDownButton,
    #playerBar .thumbUpButton,
    #playerBar .playButton,
    #playerBar .pauseButton,
    #playerBar .skipButton
    {
        -webkit-transform: scale(0.6);
        -webkit-transform-origin: top left;

        margin-left: 5px !important;
        margin-right: -5px !important;

        margin-top: 5px !important;
        margin-bottom: -4px !important;
    }

    #playerBar .playButton,
    #playerBar .pauseButton {
        margin-top: 2px !important;
        margin-right: -6px !important;
    }

    #playerBar .volumePosition {
        padding-left: 10px !important; /* override 21px */
        margin-top: -5px !important;
    }

    #playerBar .progress {
        width: 200px !important;
    }
    #playerBar .progress .progressBar {
        width: 120px !important;
    }
    #playerBar .progress .progressBar .progressMiddle {
        -webkit-transform-origin: left;
        -webkit-transform: scaleX(calc(120/345));
    }

}

